Add container files and imports them into enhanced.scss

--- a/toolkits/global/packages/global-context/scss/enhanced.scss
+++ b/toolkits/global/packages/global-context/scss/enhanced.scss
@@ -5,6 +5,7 @@
 
 @import '10-settings/breakpoints';
 @import '10-settings/colors';
+@import '10-settings/container';
 @import '10-settings/keyframes';
 @import '10-settings/layers';
 @import '10-settings/style';
@@ -16,6 +17,7 @@
 
 @import '30-mixins/buttons';
 @import '30-mixins/clearfix';
+@import '30-mixins/container';
 @import '30-mixins/media-query';
 @import '30-mixins/hiding';
 @import '30-mixins/icons';
