--- a/toolkits/nature/packages/nature-context/scss/enhanced.scss
+++ b/toolkits/nature/packages/nature-context/scss/enhanced.scss
@@ -6,7 +6,7 @@
 @import '10-settings/breakpoints';
 @import '10-settings/colors/default';
 @import '10-settings/colors/shared';
-@import '10-settings/container;
+@import '10-settings/container';
 @import '10-settings/keyframes';
 @import '10-settings/spacing';
 @import '10-settings/spacing-nature';
