--- a/toolkits/springer/packages/springer-context/scss/enhanced.scss
+++ b/toolkits/springer/packages/springer-context/scss/enhanced.scss
@@ -4,10 +4,12 @@
  */
 
 // frontend-global-toolkit
+// Dependency settings
 @import '10-settings/keyframes';
 @import '10-settings/colors/shared';
-@import '10-settings/container';
 @import '10-settings/spacing';
+
+@import '10-settings/container';
 @import '10-settings/style';
 @import '10-settings/typography';
 
