Replace container with u-container

--- a/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
@@ -9,7 +9,7 @@
 }
 
 .c-header__container {
-	@include container;
+	@include u-container;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
