--- a/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
@@ -15,6 +15,7 @@
 .c-article-metrics__body {
 	display: flex;
 	flex-wrap: wrap;
+	font-family: $font-family-sans;
 }
 
 .c-article-metrics__section--left {
@@ -64,7 +65,6 @@
 .c-article-metrics__section-heading {
 	line-height: 1.4;
 	margin-bottom: $article--vertical-spacing-medium;
-	font-weight: bold;
 	font-family: $font-family-serif;
 	border-bottom: 2px solid map-get($article--grey-palette, 'grey-1');
 }
@@ -76,7 +76,8 @@
 
 	li {
 		padding-top: $article--vertical-spacing-small;
-		padding-right: $article--vertical-spacing-small;
+		padding-right: $article--vertical-spacing-medium;
+		flex-grow: 1;
 
 		@include media-query(map-get($article--breakpoints, 'lrg'), 'min') {
 			padding-top: 0;
