--- a/toolkits/nature/packages/nature-article/scss/10-settings/article-overrides.scss
+++ b/toolkits/nature/packages/nature-article/scss/10-settings/article-overrides.scss
@@ -52,3 +52,5 @@ $article--grey-palette: (
 	'grey-6': greyscale(70),
 	'grey-7': greyscale(80)
 );
+
+$article-metrics-section-heading-font-weight: 500;
