--- a/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
@@ -64,7 +64,7 @@
 .c-article-metrics__section-heading {
 	line-height: 1.4;
 	margin-bottom: $article--vertical-spacing-medium;
-	font-weight: bold;
+	font-weight: $article-metrics-section-heading-font-weight;
 	font-family: $font-family-serif;
 	border-bottom: 2px solid map-get($article--grey-palette, 'grey-1');
 }
