adjust padding and alignment in access and citations section

--- a/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
@@ -76,7 +76,8 @@
 
 	li {
 		padding-top: $article--vertical-spacing-small;
-		padding-right: $article--vertical-spacing-small;
+		padding-right: $article--vertical-spacing-medium;
+		flex-grow: 1;
 
 		@include media-query(map-get($article--breakpoints, 'lrg'), 'min') {
 			padding-top: 0;
