set font family for metrics page - adding specific styling for the metrics explanation text

--- a/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-metrics.scss
@@ -15,6 +15,7 @@
 .c-article-metrics__body {
 	display: flex;
 	flex-wrap: wrap;
+	font-family: $font-family-sans;
 }
 
 .c-article-metrics__section--left {
@@ -38,26 +39,25 @@
 	}
 }
 
+.c-article-metrics__explanation {
+	color: map-get($article--grey-palette, 'grey-1');
+	font-size: map-get($article--font-sizes, 'font-size-2');
+	line-height: $article--vertical-spacing-large;
+
+	@include media-query(map-get($article--breakpoints, 'med'), 'min') {
+		padding-left: 60px;
+	}
+	@include media-query(map-get($article--breakpoints, 'lrg'), 'min') {
+		padding-left: 80px;
+	}
+}
+
 .c-article-metrics__section--right {
 	flex-grow: 0;
 	flex-shrink: 1;
 	
 	@include media-query(map-get($article--breakpoints, 'med'), 'min') {
 		flex-basis: 40%;
-	}
-
-	p {
-		color: map-get($article--grey-palette, 'grey-1');
-		font-size: map-get($article--font-sizes, 'font-size-2');
-		line-height: $article--vertical-spacing-large;
-
-
-		@include media-query(map-get($article--breakpoints, 'med'), 'min') {
-			padding-left: 60px;
-		}
-		@include media-query(map-get($article--breakpoints, 'lrg'), 'min') {
-			padding-left: 80px;
-		}
 	}
 }
 
@@ -89,7 +89,7 @@
 	display: flex;
 	flex-flow: column;
 	color: map-get($article--grey-palette, 'grey-1');
-
+	
 	&:nth-child(1) {
 		order: 2;
 	}
@@ -99,7 +99,7 @@
 	}
 
 	dt {
-		font-size: map-get($article--font-sizes, 'font-size-7');
+		font-size: map-get($article--font-sizes, 'font-size-6');
 		font-weight: 500;
 	}
 
