--- a/toolkits/nature/packages/nature-context/scss/10-settings/typography-nature.scss
+++ b/toolkits/nature/packages/nature-context/scss/10-settings/typography-nature.scss
@@ -6,3 +6,11 @@
 $is-flagship-journal: false !default;
 $primary-font: if($is-flagship-journal, Harding, Lora);
 $font-family-serif: $primary-font, Palatino, Times, 'Times New Roman', serif;
+
+$context--heading-font-weight: if($is-flagship-journal, bold, normal);
+$context--heading-line-height: 1.3;
+
+$context--font-size-h1: if($is-flagship-journal, 3.2rem, 3rem);
+$context--font-size-h2: 2.4rem;
+$context--font-size-h3: if($is-flagship-journal, 1.9rem, 1.7rem);
+$context--font-size-h4: if($is-flagship-journal, 1.7rem, 1.4rem);
