Set text-decoration and version

--- a/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/springer-header.scss
@@ -17,6 +17,13 @@
 
 .c-header__brand {
 	margin-right: $springer-header--brand-spacing;
+
+	a,
+	a:visited,
+	a:hover,
+	a:active {
+		text-decoration: none;
+	}
 }
 
 .c-header__navigation {
