--- a/toolkits/global/packages/global-forms/scss/30-mixins/_global-form-input.scss
+++ b/toolkits/global/packages/global-forms/scss/30-mixins/_global-form-input.scss
@@ -12,6 +12,7 @@
 	$border-radius: $global-form--border-radius
 ) {
 	width: 100%;
+	outline: 0;
 	height: $font-size + ($padding * 2);
 	border: 1px solid #{$border};
 	padding: #{$padding};
@@ -19,4 +20,5 @@
 	border-radius:  #{$border-radius};
 	color: #{$color};
 	font-size: #{$font-size};
+	line-height: inherit;
 }
