--- a/toolkits/nature/packages/nature-context/scss/enhanced.scss
+++ b/toolkits/nature/packages/nature-context/scss/enhanced.scss
@@ -31,11 +31,12 @@
 @import '30-mixins/lists';
 @import '30-mixins/style';
 @import '30-mixins/typography';
+@import '30-mixins/typography-nature';
 
 @import '40-base/forms';
 @import '40-base/layout';
 @import '40-base/links';
 @import '40-base/lists';
 @import '40-base/tables';
-@import '40-base/typography'; // from global-context
+@import '40-base/typography';
 @import '40-base/typography-nature';
