Add info color to color map and utility class

--- a/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
+++ b/toolkits/springer/packages/springer-context/scss/10-settings/colors/default.scss
@@ -9,6 +9,7 @@ $colors: (
 	'corporate-light': scale-color(#00285a, $lightness: 10%),
 	'error': #c40606,
 	'warning': #fc0,
+	'info': #004b83,
 	'success': #71ab0b,
 	'visited': #4500a7,
 	'action-base': #004b83,
