Add info status style

--- a/toolkits/springer/packages/springer-box/scss/50-components/box.scss
+++ b/toolkits/springer/packages/springer-box/scss/50-components/box.scss
@@ -18,6 +18,10 @@
 	border-bottom: $box--border-warning;
 }
 
+.c-box--info {
+	border-bottom: $box--border-info;
+}
+
 .c-box--success {
 	border-bottom: $box--border-success;
 }
