--- a/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
+++ b/toolkits/springer/packages/springer-box/scss/10-settings/box.scss
@@ -7,6 +7,7 @@ $box--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
 $box--border: 1px solid color('action-dull', 0.3);
 $box--border-error: 4px solid color('error');
 $box--border-warning: 4px solid color('warning');
+$box--border-info: 4px solid color('info');
 $box--border-success: 4px solid color('success');
 $box--line-height: 1.3;
 $box--margin-bottom: spacing(16);
