Adds keyline mixin to style

--- a/toolkits/global/packages/global-context/scss/10-settings/style.scss
+++ b/toolkits/global/packages/global-context/scss/10-settings/style.scss
@@ -4,6 +4,11 @@
  *
  */
 
+@import '../20-functions/colors';
+
+// Keyline
+$context--keyline-border-color: greyscale(70);
+
 // Shadow
 $context--shadow-border-color: black;
 $context--shadow-color: black;
