--- a/toolkits/global/packages/global-context/scss/30-mixins/style.scss
+++ b/toolkits/global/packages/global-context/scss/30-mixins/style.scss
@@ -1,3 +1,17 @@
+@mixin keyline($direction: bottom, $size: 16) {
+	$valid-directions: (top, right, bottom, left);
+
+	@if index($valid-directions, $direction) {
+		border-#{$direction}: 1px solid $context--keyline-border-color;
+		padding-#{$direction}: spacing($size);
+		margin-#{$direction}: spacing($size);
+	}
+	@else {
+		@warn '$direction should be one of #{$valid-directions}, but was #{$direction}';
+	}
+}
+
+// Utilities
 @mixin u-shadow {
 	border: 1px solid $context--shadow-border-color; // make optional?
 	box-shadow: $context--shadow-style $context--shadow-color;
