adjustments in the styles to move the orcid link to the right of the author name in the popup

--- a/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
@@ -57,7 +57,9 @@
 		font-size: map-get($article--font-sizes, 'font-size-4');
 		font-weight: 700;
 		float: left;
+		padding-right: $article--vertical-spacing-small;
 		margin-bottom: $article--vertical-spacing-small;
+		margin-top: 4px;
 	}
 
 	&__footer-heading {
