--- a/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
+++ b/toolkits/nature/packages/nature-context/scss/10-settings/colors/default.scss
@@ -24,7 +24,7 @@ $colors: (
 	'steel': #bcd2dc,
 	'grape': #bee188,
 	'lemon': #fece3e,
-	'orange': #cc4b14,
+	'orange': #b74616,
 	'soft-steel': #dae5ea,
 	'strawberry': #f59094,
 	'plum': #bfaad9,
