Fix missing trailing semi-colon

--- a/toolkits/global/packages/global-menu/scss/50-components/_menu.scss
+++ b/toolkits/global/packages/global-menu/scss/50-components/_menu.scss
@@ -74,7 +74,7 @@
 	margin: 0 0 16px;
 	padding: 0 0 16px;
 	border-right: none;
-	border-bottom: $menu--keyline-border
+	border-bottom: $menu--keyline-border;
 }
 
 /**
