add contrast modifier from nature buttons

--- a/toolkits/global/packages/global-button/scss/50-components/button.scss
+++ b/toolkits/global/packages/global-button/scss/50-components/button.scss
@@ -19,11 +19,16 @@
 	@include button-theme($button--ghost);
 }
 
-.c-button--disabled {
-	@include button-disabled;
+.c-button--contrast {
+	@include button-theme($button--primary);
+	border-color: white;
 }
 
 .c-button--inline {
 	display: inline-block;
 	width: auto;
+}
+
+.c-button--disabled {
+	@include button-disabled;
 }
