move values into settings

--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -1,3 +1,11 @@
+$button-base--text-align: left;
+$button-base--padding: 8px 16px;
+$button-base--line-height: 1.6rem;
+$button-base--border-radius: 2px;
+
+$button-shared--border-width: 1px;
+$button-shared--border-style: solid;
+
 /**
  * Button Themes
  * Variables to set themes styles
