--- a/toolkits/global/packages/global-button/scss/30-mixins/_button.scss
+++ b/toolkits/global/packages/global-button/scss/30-mixins/_button.scss
@@ -12,7 +12,7 @@
 	position: relative;
 	cursor: pointer;
 	text-decoration: none;
-	//transition: background-color 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+	transition: $button-shared--transition;
 }
 
 /**
