--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -1,6 +1,6 @@
 $button-base--text-align: left;
-$button-base--padding: 8px 12px;
-$button-base--line-height: 1.6rem;
+$button-base--padding: 8px;
+$button-base--line-height: 1.6;
 $button-base--border-radius: 2px;
 
 $button-shared--border-width: 1px;
