--- a/toolkits/global/packages/global-button/scss/10-settings/button.scss
+++ b/toolkits/global/packages/global-button/scss/10-settings/button.scss
@@ -1,8 +1,12 @@
+/**
+ *  Button settings
+ *
+ */
+
 $button-base--text-align: left;
 $button-base--padding: 8px;
 $button-base--line-height: 1.6;
 $button-base--border-radius: 2px;
-
 $button-shared--border-width: 1px;
 $button-shared--border-style: solid;
 $button-shared--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
@@ -67,5 +71,7 @@ $button--disabled: (
 	'hoverBorderColor': greyscale(70),
 	'hoverBackgroundColor': transparent,
 	'hoverBackgroundImage': none,
-	'focusBorderColor': greyscale(70)
+	'hoverTextDecoration': none,
+	'focusBorderColor': greyscale(70),
+	'focusTextDecoration': none
 );
